Switched away from a deprecated Long constructor.